印刷画面への推移を実装

--- a/development/kindergarten_roster_management/www/event.html
+++ b/development/kindergarten_roster_management/www/event.html
@@ -449,36 +449,36 @@
                                 document.getElementById("image2").innerHTML = "<img src=\"./img/bazzer.jpg\" class=\"prtOnly\">";
                                 document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                                 document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
-                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
+                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                             } else if (eveindx == "2") {
                                 document.getElementById("image").innerHTML = "<img src=\"./img/sports.jpg\" class=\"dspOnly\">";
                                 document.getElementById("image2").innerHTML = "<img src=\"./img/sports.jpg\" class=\"prtOnly\">";
                                 document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                                 document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
-                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
+                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                             } else if (eveindx == "3") {
                                 document.getElementById("image").innerHTML = "<img src=\"./img/matsuri.jpg\" class=\"dspOnly\">";
                                 document.getElementById("image2").innerHTML = "<img src=\"./img/matsuri.jpg\" class=\"prtOnly\">";
                                 document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                                 document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
-                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
+                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                             } else if (eveindx == "4") {
                                 document.getElementById("image").innerHTML = "<img src=\"./img/mochi.jpg\" class=\"dspOnly\">";
                                 document.getElementById("image2").innerHTML = "<img src=\"./img/mochi.jpg\" class=\"prtOnly\">";
                                 document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                                 document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
-                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
+                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                             } else if (eveindx == "5") {
                                 document.getElementById("image").innerHTML = "<img src=\"./img/sotsuenshiki.jpg\" class=\"dspOnly\">";
                                 document.getElementById("image2").innerHTML = "<img src=\"./img/sotsuenshiki.jpg\" class=\"prtOnly\">";
                                 document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                                 document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
-                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.png\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
+                                document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                                document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                             }
                         } else {
                             alert("選択して下さい");
