--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width,initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.0">
     <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
     <title>園児名簿登録フォーム</title>
 </head>
 
-<body background=“0410_gingham.jpg” bgcolor=“#ffc8c8” text="#000000" link="#0000ff" vlink="#800080" alink="#ff0000">
+<body>
 
 <div class='header'><h2><center><font face=monospace>つくしの子保育園<BR>園児名簿登録</font></center></h2></div>
+
+<center><img src="hoikuen.gif"  width="15%" height="15%"></center><BR>
 <font face=sans-serif>
 <p><center>以下に必要事項を入力してください</center>
 </p>
@@ -67,6 +69,7 @@
 <center><button type ="submit" name="action" value="kakunin">確認画面へ</button></center>
 </font>
 </form>
+<img src="tsukushi.gif"  width="50%" height="20%" ><img src="tsukushi.gif"  width="50%" height="20%">
 
 </body>
 </html>
