--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -14,7 +14,7 @@
  <center><p>登録 ありがとうございました
   </p>
 
-<center><img src="hoikuen.gif"  width="15%" height="15%"></center><BR>
+<center><img src="img/hoikuen.gif"  width="15%" height="15%"></center><BR>
 
 <font face=fantasy size="5" color="hotpink">
  <center><p>つくしの子保育園
@@ -35,7 +35,7 @@ win.close();
 </center>
 </font>
 
-<img src="tsukushi.gif"  width="50%" height="20%" ><img src="tsukushi.gif"  width="50%" height="20%">
+<img src="img/tsukushi.gif"  width="50%" height="20%" ><img src="img/tsukushi.gif"  width="50%" height="20%">
 
-  </body>
+</body>
   </html>
