--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -13,7 +13,7 @@
 
 <div class='header'><h2><center><font face=monospace>つくしの子保育園<BR>園児名簿登録</font></center></h2></div>
 
-<center><img src="hoikuen.gif"  width="15%" height="15%"></center><BR>
+<center><img src="img/hoikuen.gif"  width="15%" height="15%"></center><BR>
 <font face=sans-serif>
 <p><center>以下に必要事項を入力してください</center>
 </p>
@@ -69,7 +69,7 @@
 <center><button type ="submit" name="action" value="kakunin">確認画面へ</button></center>
 </font>
 </form>
-<img src="tsukushi.gif"  width="50%" height="20%" ><img src="tsukushi.gif"  width="50%" height="20%">
+<img src="img/tsukushi.gif"  width="50%" height="20%" ><img src="img/tsukushi.gif"  width="50%" height="20%">
 
 </body>
 </html>
