--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -8,68 +8,60 @@
     <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
     <title>園児名簿登録フォーム</title>
 </head>
-
 <body>
+    <div class='header'><h4><center><font face=monospace>つくしの子保育園<br>園児名簿登録</font></center></h4></div>
+    <!--<center><img src="img/hoikuen.gif" width="15%" height="15%"></center><br>-->
+    <font face=sans-serif>
+        <p>
+            <center>以下に必要事項を入力してください</center>
+        </p>
+        <form action="comfirmation.php" method="post">
 
-<div class='header'><h2><center><font face=monospace>つくしの子保育園<BR>園児名簿登録</font></center></h2></div>
+            園児のお名前<br><input type="text" name="name">
+            <br>
+            <!-- ▼郵便番号入力フィールド(7桁) -->
+            郵便番号(半角数字)<br><input type="text" name="zip11" size="10" maxlength="8" onkeyup="AjaxZip3.zip2addr(this,'','addr11','addr11');" />
+            <!-- ▼住所入力フィールド(都道府県+以降の住所) -->
+            <br>住所(郵便番号に応じて自動で入力されます)<br><input type="text" name=addr11 size="60" />
+            <br>
+            電話番号(緊急連絡先)(半角英数)<br>
+            <input type="text" name="tel" /></P>
+            卒園年度(在園中の方は卒園予定年度)<br>
+            <select name="sotsuen">
+                <option value="2010">2010年</option>
+                <option value="2011">2011年</option>
+                <option value="2012">2012年</option>
+                <option value="2013">2013年</option>
+                <option value="2014">2014年</option>
+                <option value="2015">2015年</option>
+                <option value="2016">2016年</option>
+                <option value="2017">2017年</option>
+                <option value="2018">2018年</option>
+                <option value="2019">2019年</option>
+                <option value="2020">2020年</option>
+                <option value="2021">2021年</option>
+                <option value="2022">2022年</option>
+                <option value="2023">2023年</option>
+                <option value="2024">2024年</option>
+                <option value="2025">2025年</option>
+            </select>
+            <p>
+                メールアドレス(任意)(半角英数)<br>
+                <input type="text" name="mail1" />@
 
-<center><img src="img/hoikuen.gif"  width="15%" height="15%"></center><BR>
-<font face=sans-serif>
-<p><center>以下に必要事項を入力してください</center>
-</p>
-<form action="comfirmation.php" method="post">
-
-
-園児のお名前<BR><input type="text" name="name">
-<BR>
-
-<!-- ▼郵便番号入力フィールド(7桁) -->
-郵便番号(半角数字)<BR><input type="text" name="zip11" size="10" maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','addr11','addr11');"/>
-<!-- ▼住所入力フィールド(都道府県+以降の住所) -->
-<BR>住所(郵便番号に応じて自動で入力されます)<BR><input type="text" name=addr11 size="60"/>
-<BR>
-
-電話番号(緊急連絡先)(半角英数)<BR>
-<INPUT type="text" name="tel"/></P>
-卒園年度(在園中の方は卒園予定年度)<BR>
-<SELECT name="sotsuen">
-<OPTION value="2010">2010年</OPTION>
-<OPTION value="2011">2011年</OPTION>
-<OPTION value="2012">2012年</OPTION>
-<OPTION value="2013">2013年</OPTION>
-<OPTION value="2014">2014年</OPTION>
-<OPTION value="2015">2015年</OPTION>
-<OPTION value="2016">2016年</OPTION>
-<OPTION value="2017">2017年</OPTION>
-<OPTION value="2018">2018年</OPTION>
-<OPTION value="2019">2019年</OPTION>
-<OPTION value="2020">2020年</OPTION>
-<OPTION value="2021">2021年</OPTION>
-<OPTION value="2022">2022年</OPTION>
-<OPTION value="2023">2023年</OPTION>
-<OPTION value="2024">2024年</OPTION>
-<OPTION value="2025">2025年</OPTION>
-</SELECT>
-
-<P>メールアドレス(任意)(半角英数)<BR>
-<INPUT type="text" name="mail1"/>@
-
-<SELECT name="mailaddress">
-<OPTION value="docomo.ne.jp">docomo.ne.jp</OPTION>
-<OPTION value="ezweb.ne.jp">ezweb.ne.jp</OPTION>
-<OPTION value="softbank.ne.jp">softbank.ne.jp</OPTION>
-<OPTION value="yahoo.co.jp">yahoo.co.jp</OPTION>
-<OPTION value="gmail.com">gmail.com</OPTION>
-</SELECT>
-<BR>上記のメールアドレスにない方は<BR>こちらに入力してください↓<BR>
-<INPUT type="text" name="mail2"/>
-
-</p>
-
-<center><button type ="submit" name="action" value="kakunin">確認画面へ</button></center>
-</font>
-</form>
-<img src="img/tsukushi.gif"  width="50%" height="20%" ><img src="img/tsukushi.gif"  width="50%" height="20%">
-
+                <select name="mailaddress">
+                    <option value="docomo.ne.jp">docomo.ne.jp</option>
+                    <option value="ezweb.ne.jp">ezweb.ne.jp</option>
+                    <option value="softbank.ne.jp">softbank.ne.jp</option>
+                    <option value="yahoo.co.jp">yahoo.co.jp</option>
+                    <option value="gmail.com">gmail.com</option>
+                </select>
+                <br>上記のメールアドレスにない方は<br>こちらに入力してください↓<br>
+                <input type="text" name="mail2" />
+            </p>
+            <center><button type="submit" name="action" value="kakunin">確認画面へ</button></center>
+    </font>
+    </form>
+    <img src="img/tsukushi.gif" width="50%" height="20%"><img src="img/tsukushi.gif" width="50%" height="20%">
 </body>
 </html>
