--- a/development/kindergarten_roster_management/www/home.html
+++ b/development/kindergarten_roster_management/www/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width,initial-scale=1.0, user-scalable=yes, minimum-scale=1.0, maximum-scale=1.0">
-    <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
+    <!-- <link href="assets/ratchet/css/ratchet.css" rel="stylesheet"> -->
     <link href="assets/css/styles.css" rel="stylesheet">
     <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
     <title>園児名簿登録フォーム</title>
