画像の差し替え、背景カラーの調整

--- a/development/kindergarten_roster_management/www/first_for_teacher_ver2.html
+++ b/development/kindergarten_roster_management/www/first_for_teacher_ver2.html
@@ -1,20 +1,22 @@
-
+﻿
 <html>
 
     <head>
         <!--css javaスクリプトなど nado  -->
         <meta charset="UTF-8">   
-        <link rel="stylesheet" type="text/css" href="first_for_teacher.css">    
+        <link rel="stylesheet" type="text/css" href="first_for_teacher.css"> 
+        
+   
     </head>
     <body>
         <TABLE border="0"  style="table-layout:fixed;" width="100%">
             <caption><CENTER><h1> 名簿/年賀/はがき</h1></CENTER></caption>
             <TR>
-                <TD colspan="2"><CENTER><a href="roster.html"><img src="meibo.png" width="40%" height="auto"></a>
+                <TD colspan="2"><CENTER><a href="roster.html"><img src="meibo.jpg" width="40%" height="auto"></a>
                 </CENTER>
                 </TD>
                 
-                <TD colspan="2"><CENTER><a href="%E9%96%8B%E7%99%BA_for_nenngajyou.html"><img src="nenga.png" width="40%" height="auto"></a>
+                <TD colspan="2"><CENTER><a href="%E9%96%8B%E7%99%BA_for_nenngajyou.html"><img src="nenga.jpg" width="40%" height="auto"></a>
                     </CENTER>
                 </TD>
             </TR>
