--- a/development/kindergarten_roster_management/www/roster.html
+++ b/development/kindergarten_roster_management/www/roster.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -8,6 +8,12 @@
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href="css/roster.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            background-color: #f0f8ff;
+        }
+    </style>
+
 </head>
 <body>
 
