--- a/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
+++ b/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
@@ -1,8 +1,13 @@
-
+﻿
 <!-- saved from url=(0033)http://127.0.0.1:50631/index.html -->
 <html data-brackets-id="1"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+                               <style type="text/css">
+                                   body {
+                                       background-color: #f0f8ff;
+                                   }
+                               </style>
+
 </head>
 <body data-brackets-id="2">
     <a href="javascript:history.back();">戻る</a>
