--- a/development/kindergarten_roster_management/www/event.html
+++ b/development/kindergarten_roster_management/www/event.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">-->
     <meta http-equiv="content-type" content="text/html; charset=shift_jis">
     <title></title>
-    <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
+    <!--<link href="assets/ratchet/css/ratchet.css" rel="stylesheet">-->
     <link href="assets/css/styles.css" rel="stylesheet">
     <style type="text/css">
         body {
@@ -347,10 +347,10 @@
     <div class="prtOnly" id="hagaki2"></div>
     <div class="dspOnly" id="QR"></div>
     <div class="prtOnly" id="QR2"></div>
-    <div class="dspOnly" id="test" style="position:absolute;top:450px;left:80px;"></div>
-    <div class="dspOnly" id="~" style="position:absolute;top:490px;left:205px;"></div>
-    <div class="dspOnly" id="start" style="position:absolute;top:490px;left:120px;"></div>
-    <div class="dspOnly" id="end" style="position:absolute;top:490px;left:255px;"></div>
+    <div class="dspOnly" id="test" style="position:absolute;top:480px;left:80px;"></div>
+    <div class="dspOnly" id="~" style="position:absolute;top:520px;left:205px;"></div>
+    <div class="dspOnly" id="start" style="position:absolute;top:520px;left:120px;"></div>
+    <div class="dspOnly" id="end" style="position:absolute;top:520px;left:255px;"></div>
     <div class="prtOnly" id="test2" style="position:absolute;top:270px;left:80px;"></div>
     <div class="prtOnly" id="~2" style="position:absolute;top:310px;left:205px;"></div>
     <div class="prtOnly" id="start2" style="position:absolute;top:310px;left:120px;"></div>
@@ -448,37 +448,37 @@
                 if (eveindx == "1") {
                     document.getElementById("image").innerHTML = "<img src=\"./img/bazzer.jpg\" class=\"dspOnly\">";
                     document.getElementById("image2").innerHTML = "<img src=\"./img/bazzer.jpg\" class=\"prtOnly\">";
-                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
+                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:260px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                     document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:290px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
                     document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                 } else if (eveindx == "2") {
                     document.getElementById("image").innerHTML = "<img src=\"./img/sports.jpg\" class=\"dspOnly\">";
                     document.getElementById("image2").innerHTML = "<img src=\"./img/sports.jpg\" class=\"prtOnly\">";
-                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
+                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:260px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                     document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:290px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
                     document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                 } else if (eveindx == "3") {
                     document.getElementById("image").innerHTML = "<img src=\"./img/matsuri.jpg\" class=\"dspOnly\">";
                     document.getElementById("image2").innerHTML = "<img src=\"./img/matsuri.jpg\" class=\"prtOnly\">";
-                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
+                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:260px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                     document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:290px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
                     document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                 } else if (eveindx == "4") {
                     document.getElementById("image").innerHTML = "<img src=\"./img/mochi.jpg\" class=\"dspOnly\">";
                     document.getElementById("image2").innerHTML = "<img src=\"./img/mochi.jpg\" class=\"prtOnly\">";
-                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
+                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:260px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                     document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:290px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
                     document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                 } else if (eveindx == "5") {
                     document.getElementById("image").innerHTML = "<img src=\"./img/sotsuenshiki.jpg\" class=\"dspOnly\">";
                     document.getElementById("image2").innerHTML = "<img src=\"./img/sotsuenshiki.jpg\" class=\"prtOnly\">";
-                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:240px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
+                    document.getElementById("hagaki").innerHTML = "<div style=\"position:absolute;top:260px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"dspOnly\"></div>";
                     document.getElementById("hagaki2").innerHTML = "<div style=\"position:absolute;top:0px;left:420px;\"><img src=\"./img/hagaki.jpg\" class=\"prtOnly\"></div>";
-                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:250px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+                    document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:290px;left:320px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
                     document.getElementById("QR2").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:30px;left:320px;\" width=\"60\" height=\"60\" class=\"prtOnly\">";
                 }
             } else {
