年賀状のQRコード表示位置の微調整

--- a/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
+++ b/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
@@ -69,10 +69,10 @@ function myChange(){	// 定期的に画像を更新する関数
         </a>
     </div>
 
-    <div id="QR"></div>
+    <div class="" id="QR"></div>
     <script data-brackets-id="5" type="text/javascript">
 <!--
-        document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:120px;left:520px;\" width=\"60\" height=\"60\" class=\"dspOnly\">";
+        document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:70px;left:353px;\" width=\"45\" height=\"45\" class=\"dspOnly\">";
 
 
 
