--- a/development/kindergarten_roster_management/www/done.html
+++ b/development/kindergarten_roster_management/www/done.html
@@ -4,7 +4,7 @@
 
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-sScalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  
+
       <link href="assets/ratchet/css/ratchet.css" rel="stylesheet">
       <link href="assets/css/styles.css" rel="stylesheet">
   </head>
@@ -31,7 +31,7 @@ win.close();
 </script>
 <font face=fantasy>
 
-<input type="button" VALUE="ブラウザを閉じる" onclick="fnWinClose()"/>
+<!-- <input type="button" VALUE="ブラウザを閉じる" onclick="fnWinClose()"/> -->
 </center>
 </font>
 
