QRコード埋め込み

--- a/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
+++ b/development/kindergarten_roster_management/www/開発_for_nenngajyou.html
@@ -51,7 +51,7 @@ function myChange(){	// 定期的に画像を更新する関数
         <tr>
             <td>
                 <center>
-                    <div class=""><img data-brackets-id="4" src="./index_files/tori.jpg" width="50%" height="auto" name="sshow"></div>
+                    <div class=""><img data-brackets-id="4" src="tori.jpg" width="50%" height="auto" name="sshow"></div>
                 </center>
             </td>
 
@@ -69,7 +69,7 @@ function myChange(){	// 定期的に画像を更新する関数
         </a>
     </div>
 
-    <div class="" id="QR"></div>
+    <!-- <div class="" id="QR"></div> -->
     <script data-brackets-id="5" type="text/javascript">
 <!--
         document.getElementById("QR").innerHTML = "<img src=\"./img/QR.gif\" style=\"position:absolute;top:70px;left:353px;\" width=\"45\" height=\"45\" class=\"dspOnly\">";
